| Summary: | ASTERISK-28812: First DTMF is not get | ||
| Reporter: | Bernard Merindol (bernard merindol) | Labels: | patch |
| Date Opened: | 2020-04-07 02:39:20 | Date Closed: | 2020-04-14 10:30:15 |
| Priority: | Major | Regression? | No |
| Status: | Closed/Complete | Components: | Resources/res_rtp_asterisk |
| Versions: | 16.9.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | ubuntu | Attachments: | ( 0) dtmfasterisk.pcap ( 1) res_rtp_asterisk.c.patch |
| Description: | When the first DTMF receive in RF2833 codec have TimeStamp at 0 is not passed to process.
Problem is in res/res_rtp_asterisk.c in process_dtmf_rfc2833 function. Attach patch for this function and pcap file with DTMF Problem. This problem is present in Asterisk 11 to 16 . Patch is for Asterisk 16.9.0 | ||
| Comments: | By: Asterisk Team (asteriskteam) 2020-04-07 02:39:21.368-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. By: Bernard Merindol (bernard merindol) 2020-04-07 02:41:43.153-0500 dtmfasterisk.pcap is Wireshark capture with DTMF start wit RTP Time Stamp at 0. res_rtp_asterisk.c.patch is my patch, is resolved this problem By: George Joseph (gjoseph) 2020-04-07 10:15:15.108-0500 Can you submit this patch via Gerrit? It's a simple patch I know but changes to res_rtp_asterisk usually require some discussion and if I submit it on your behalf it will complicate the communications. https://gerrit.asterisk.org https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process By: Bernard Merindol (bernard merindol) 2020-04-07 11:16:15.948-0500 Ok , I submit tomorrow from my desk. I am in home office and my bandwidth is very poor to get asterisk git. By: Bernard Merindol (bernard merindol) 2020-04-08 06:07:29.220-0500 Patch commit in Gerrit By: Friendly Automation (friendly-automation) 2020-04-14 10:30:16.517-0500 Change 14230 merged by Friendly Automation: res_rtp_asterisk.c: Check for first DTMF having timestamp set to 0 [https://gerrit.asterisk.org/c/asterisk/+/14230|https://gerrit.asterisk.org/c/asterisk/+/14230] By: Friendly Automation (friendly-automation) 2020-04-14 10:33:11.154-0500 Change 14228 merged by Friendly Automation: res_rtp_asterisk.c: Check for first DTMF having timestamp set to 0 [https://gerrit.asterisk.org/c/asterisk/+/14228|https://gerrit.asterisk.org/c/asterisk/+/14228] By: Friendly Automation (friendly-automation) 2020-04-14 10:51:11.968-0500 Change 14141 merged by Joshua Colp: res_rtp_asterisk.c: Check for first DTMF having timestamp set to 0 [https://gerrit.asterisk.org/c/asterisk/+/14141|https://gerrit.asterisk.org/c/asterisk/+/14141] By: Friendly Automation (friendly-automation) 2020-04-14 10:51:25.652-0500 Change 14229 merged by Joshua Colp: res_rtp_asterisk.c: Check for first DTMF having timestamp set to 0 [https://gerrit.asterisk.org/c/asterisk/+/14229|https://gerrit.asterisk.org/c/asterisk/+/14229] | ||